<resources>
    <string name="app_name">Catalog</string>
    <string name="title_product_list">Product List</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="item_content">Item Content</string>
    <string name="item_details">Item Details</string>


</resources>
